<resources>

    <string name="app_name">Simple GPS Measurer</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">About</string>
    <string name="title_activity_main">Simple GPS Measurer</string>
    
    <string name="toast_gps_disable">GPS is disable.</string>  
    <string name="toast_trial_hint">This a trial version for the APP, please purchase the professional version.</string>  
    <string name="gps_status_app_not_installed">The APP GPS Status is not installed.</string>
   
    <string name="btn_value_start">START</string>
    <string name="btn_value_stop">STOP</string>
    
    <string name="txt_static_gps_status_guide">GPS Status: </string>
    <string name="txt_static_sat_status_guide">Sat Status(Used/Total): </string>
    <string name="txt_static_latitude_guide">Latitude: </string>
    <string name="txt_static_longitude_guide">Longitude: </string>
    <string name="txt_static_lati_long_guide">Location: </string>
    <string name="txt_static_distance_guide">Distance: </string>
    <string name="txt_static_area_guide">Area: </string>
    
    <string name="txt_value_gps_disable">DISABLE</string>
    <string name="txt_value_gps_fixing">FIXING</string>
    <string name="txt_value_gps_fixed">FIXED</string>
    
    <string name="txt_value_sat_intial_value">0/0</string>
    <string name="txt_value_initial_value">0.00</string>
    
    <string name="txt_value_running_idle">IDLE</string>
    <string name="txt_value_running_first_point">SELECTING FIRST POINT</string>
    <string name="txt_value_running_measure">MEASURING</string>
    
    <string name="txt_value_distance_unit">m</string>
    <string name="txt_value_distance_km">km</string>
    <string name="txt_value_distance_feet">feet</string>
    <string name="txt_value_distance_mile">mile</string>
    
    <string name="txt_value_area_unit">sq.m.</string>
    <string name="txt_value_area_hectare">hectare</string>
    <string name="txt_value_area_acre">acre</string>
    <string name="txt_value_area_mu">Mu</string>   
    
    <string name="btn_static_calculate">Calculate</string>
    <string name="btn_static_re_calculate">Calculate</string>
    <string name="txt_static_unit_price_guide">Unit Price: </string>
    <string name="txt_static_total_price_guide">Total Price: </string>
    <string name="txt_static_unit_price_unit">$/sq.m.</string>
    <string name="txt_static_money_unit">$</string>
    
    <string name="txt_about_dialog_title">About Simple GPS measurer</string>
    <string name="txt_about_dialog_instruction_guide">Instruction: </string>
    <string name="txt_about_dialog_instruction">After clicking button to start, please stay at a location to get the start point. Then Walk around the area to be measured. After finishing the measurement, you can get the result by clicking button.</string>
    <string name="txt_about_dialog_trial_guide">Trial limit info: </string>
    <string name="txt_about_dialog_trial_info">Distance Limit: 500m\nArea Limit: 10000sq.m.</string>
    <string name="txt_about_dialog_author_guide">author: </string>
    <string name="txt_about_dialog_author">Kevin Zhang</string>
    <string name="txt_about_dialog_email_guide">Email: </string>
    <string name="txt_about_dialog_email">2350909598@qq.com</string>
    
    <string name="txt_about_dialog_ok">OK</string>
    
    <string name="txt_valid_dialog_title">Simple GPS measurer</string>
    <string name="txt_valid_dialog_instruction">This device has no authorization, please purchase the authorised device to use this app.</string>    
    
    <string name="btn_cal_pad_num_1">1</string>
    <string name="btn_cal_pad_num_2">2</string>
    <string name="btn_cal_pad_num_3">3</string>
    <string name="btn_cal_pad_num_4">4</string>
    <string name="btn_cal_pad_num_5">5</string>
    <string name="btn_cal_pad_num_6">6</string>
    <string name="btn_cal_pad_num_7">7</string>
    <string name="btn_cal_pad_num_8">8</string>
    <string name="btn_cal_pad_num_9">9</string>
    <string name="btn_cal_pad_num_0">0</string>
    <string name="btn_cal_pad_num_dot">.</string>
    <string name="btn_cal_pad_num_C">C</string>
    <string name="btn_cal_btn">Calculate</string>
    
    <string name="menu_clear_history">Clear History</string>
    
    <string name="dblist_no_record">No History</string>
    
</resources>