<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bk_color"
    android:orientation="vertical" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bk_color"
        android:paddingLeft="10dp"
        android:orientation="horizontal" >
        <TextView     
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@color/bk_color"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/txt_static_distance_guide"
            tools:context=".MainActivity" />
        <TextView     
            android:id="@+id/txt_id_his_distance"
            android:layout_weight="1"       
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:background="@color/bk_color"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/txt_value_initial_value"
            tools:context=".MainActivity" />
        <Spinner     
            android:id="@+id/spinner_id_his_distance_unit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingLeft="5dp" />

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bk_color"
        android:paddingLeft="10dp"
        android:orientation="horizontal" >
        <TextView     
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@color/bk_color"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/txt_static_area_guide"
            tools:context=".MainActivity" />
        <TextView     
            android:id="@+id/txt_id_his_area"
            android:layout_weight="1"       
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:background="@color/bk_color"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/txt_value_initial_value"
            tools:context=".MainActivity" />
        <Spinner     
            android:id="@+id/spinner_id_his_area_unit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingLeft="5dp" />

    </LinearLayout>      
    <com.example.smartgpsmeasurer.TrackView 
        android:id="@+id/view_id_his_trackview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>